[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/ui/Hud.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/alert_bar_empty.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/alert_bar_full.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/alert_icon_sheet.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/psychic_energy_bar_empty.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/psychic_energy_bar_full.png" type="Texture" id=6]
[ext_resource path="res://scenes/ui/Dialogue.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/ui/alert_bar_flash.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/psychic_energy_bar_flash.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 32, 2, 32, 27 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 2, 32, 27 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 12, 56 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 12, 0, 12, 56 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 12, 56 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 10 )
region = Rect2( 12, 0, 12, 56 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 10 )
region = Rect2( 24, 0, 12, 56 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 10 )
region = Rect2( 36, 0, 12, 56 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="Hud" type="CanvasLayer"]
layer = 101
script = ExtResource( 1 )

[node name="BasePanic" type="Sprite" parent="."]
position = Vector2( 15, 15 )
texture = SubResource( 1 )
centered = false

[node name="FlashPanic" type="Sprite" parent="."]
visible = false
position = Vector2( 15, 15 )
texture = SubResource( 2 )
centered = false

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 23.0
margin_top = 50.0
margin_right = 31.0
margin_bottom = 90.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
max_value = 40.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
fill_mode = 3

[node name="AlertFlash" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 31, 102 )
scale = Vector2( 2, 2 )
frames = SubResource( 6 )

[node name="FlashTimer" type="Timer" parent="."]
one_shot = true

[node name="Mana" type="TextureProgress" parent="."]
visible = false
margin_left = 441.0
margin_top = 50.0
margin_right = 449.0
margin_bottom = 90.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
max_value = 4.0
value = 1.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
fill_mode = 3

[node name="ManaFlash" type="AnimatedSprite" parent="Mana"]
visible = false
position = Vector2( 4, 26 )
frames = SubResource( 11 )
speed_scale = 0.5

[node name="Dialogue" parent="." instance=ExtResource( 7 )]
position = Vector2( 19, 174 )
frame = 1

[node name="Noise" type="ColorRect" parent="."]
visible = false
margin_left = 450.0
margin_top = 27.0
margin_right = 490.0
margin_bottom = 67.0
rect_scale = Vector2( 0.5, 0.5 )
color = Color( 0.564706, 0.321569, 0.737255, 1 )

[node name="Name" type="Label" parent="Noise"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "PN"

[node name="Key" type="Label" parent="Noise"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "3"
align = 2
valign = 2

[node name="Teleport" type="ColorRect" parent="."]
visible = false
margin_left = 426.0
margin_top = 4.0
margin_right = 466.0
margin_bottom = 44.0
rect_scale = Vector2( 0.5, 0.5 )
color = Color( 0.564706, 0.321569, 0.737255, 1 )

[node name="Name" type="Label" parent="Teleport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "TD"

[node name="Key" type="Label" parent="Teleport"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "2"
align = 2
valign = 2

[node name="Dominate" type="ColorRect" parent="."]
visible = false
margin_left = 426.0
margin_top = 27.0
margin_right = 466.0
margin_bottom = 67.0
rect_scale = Vector2( 0.5, 0.5 )
color = Color( 0.564706, 0.321569, 0.737255, 1 )

[node name="Name" type="Label" parent="Dominate"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "PN"

[node name="Key" type="Label" parent="Dominate"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "4"
align = 2
valign = 2

[node name="Slow" type="ColorRect" parent="."]
visible = false
margin_left = 450.0
margin_top = 4.0
margin_right = 490.0
margin_bottom = 44.0
rect_scale = Vector2( 0.5, 0.5 )
color = Color( 0.564706, 0.321569, 0.737255, 1 )

[node name="Name" type="Label" parent="Slow"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "SA"

[node name="Key" type="Label" parent="Slow"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "1"
align = 2
valign = 2

[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
[connection signal="animation_finished" from="Mana/ManaFlash" to="." method="_on_ManaFlash_animation_finished"]
